refactor to client/server architecture